--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,11 @@ django-crispy-forms
 numpy~=1.23.3
 sklearn~=0.0
 pandas~=1.5.0
+dash-bio==1.0.1
 
 Django~=4.1.2
 scikit-learn~=1.1.2
+matplotlib~=3.6.1
+scipy~=1.9.2
+plotly~=5.10.0
+mttkinter~=0.6.1
