--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ numpy~=1.23.3
 sklearn~=0.0
 pandas~=1.5.0
 dash-bio==1.0.1
-
+django-cors-headers
 Django~=4.1.2
 scikit-learn~=1.1.2
 matplotlib~=3.6.1
 scipy~=1.9.2
 plotly~=5.10.0
 mttkinter~=0.6.1
+
+kaleido
