--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,62 @@
-virtualenv
-django-crispy-forms
-numpy~=1.23.3
-sklearn~=0.0
-pandas~=1.5.0
+asgiref==3.5.2
+attrs==22.1.0
+biopython==1.79
+Brotli==1.0.9
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+colour==0.1.5
+contourpy==1.0.5
+cycler==0.11.0
+dash==2.6.2
 dash-bio==1.0.1
-django-cors-headers
-Django~=4.1.2
-scikit-learn~=1.1.2
-matplotlib~=3.6.1
-scipy~=1.9.2
-plotly~=5.10.0
-mttkinter~=0.6.1
-
-kaleido
-seaborn
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+distlib==0.3.6
+Django==4.1.2
+django-cors-headers==3.13.0
+django-crispy-forms==1.14.0
+filelock==3.8.0
+Flask==2.2.2
+Flask-Compress==1.13
+fonttools==4.37.4
+GEOparse==2.0.3
+idna==3.4
+importlib-metadata==5.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.16.0
+kaleido==0.2.1
+kiwisolver==1.4.4
+MarkupSafe==2.1.1
+matplotlib==3.6.1
+mttkinter==0.6.1
+numpy==1.23.3
+packaging==21.3
+pandas==1.5.0
+ParmEd==3.4.3
+periodictable==1.6.1
+Pillow==9.2.0
+platformdirs==2.5.2
+plotly==5.10.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+pytz==2022.4
+requests==2.28.1
+scikit-learn==1.1.2
+scipy==1.9.2
+seaborn==0.12.0
+six==1.16.0
+sklearn==0.0
+sqlparse==0.4.3
+tenacity==8.1.0
+threadpoolctl==3.1.0
+tk==0.1.0
+tqdm==4.64.1
+urllib3==1.26.12
+virtualenv==20.16.5
+Werkzeug==2.2.2
+zipp==3.9.0
