--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.4
 requests==2.28.1
+ruamel.yaml==0.17.21
 scikit-learn==1.1.2
 scipy==1.9.2
 seaborn==0.12.0
